--- a/frontend/src/components/index.styles.scss
+++ b/frontend/src/components/index.styles.scss
@@ -1,3 +1,11 @@
 .Wrapper {
   display: block;
 }
+
+$mobie: 1300px;
+
+@media screen and (max-width: 1300px) {
+  .Wrapper {
+    width: 1300px;
+  }
+}
